Fixed majiorty of major issues
Co-authored-by: Aditya Gadre <526agadre@users.noreply.github.com>

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     </header>
     <main>
       <h1>Our Purpose</h1>
-      <img src="logo.png" alt="logo" class="logo" />
+    <img src="logo.png" alt="Placeholder image" class="logo" />
       <div class="content">
         <p>
           <strong>Our Story:</strong> Little Bird Toys, established in 2018, brings families handcrafted wooden toys designed to spark imagination and slow down playtime. Our heirloom-quality collection is built from sustainable materials and made to last a lifetime, fostering connections between generations.<br />
@@ -47,6 +47,7 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
-    <script src="script.js"></script>
+   <script src="itemlist.js"></script>
+<script src="script.js"></script>
   </body>
 </html>
