--- a/contact.html
+++ b/contact.html
@@ -69,5 +69,7 @@
         }, 3000);
       });
     </script>
+    <script src="itemlist.js"></script>
+<script src="script.js"></script>
   </body>
 </html>
