--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
   </head>
   <body>
     <header>
+       <div id="loadingScreen">
+        <img src="logo.png" alt="Little Bird Toys Logo" id="logo" />
+  <h1>Loading...</h1>
+  <div class="progress-container">
+    <div class="progress-bar" id="progressBar"></div>
+  </div>
+</div>
       <nav>
         <div class="center">
           <a href="index.html">Home</a>
@@ -24,13 +31,7 @@
       </nav>
     </header>
     <main>
-      <div id="splash">
-        <img src="logo.png" alt="Logo" id="logo" />
-        <h1>Loading...</h1>
-        <div class="progress-container">
-          <div class="progress"progress-bar" id="progress-bar"></div>
-        </div>
-      </div>
+    
       <div id="alternate-logo-container" class="d-flex justify-content-center align-items-center" style="min-height: 60vh; display: none;">
         <img src="Alternate Logo 2.png" alt="Alternate Logo" class="img-fluid" />
       </div>
