Centered buttons only needs cards to be fixed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
     
       <div id="alternate-logo-container" class="d-flex justify-content-center align-items-center" style="min-height: 60vh; display: none;">
-        <img src="Alternate Logo 2.png" alt="Alternate Logo" class="img-fluid" />
+        <img src="Alternate Logo 2.png" alt="Alternate Logo" class="img-fluid homescreenlogo" />
       </div>
     </main>
     <footer>
