changed card sizes Co-authored-by: Aditya Gadre <526agadre@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 </div>
       <nav>
-        <div class="center">
+        <div class="justify-content-center align-items-center">
           <a href="index.html">Home</a>
           <a href="shopping.html">Shopping</a>
           <a href="about.html">About</a>
@@ -36,9 +36,7 @@
         <img src="Alternate Logo 2.png" alt="Alternate Logo" class="img-fluid homescreenlogo" />
       </div>
     </main>
-    <footer>
-      <p>&copy; 2025 Little Bird Toys. All rights reserved.</p>
-    </footer>
+   
     <audio id="startup-sound" src="startup.mp3"></audio>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
