--- a/shopping.html
+++ b/shopping.html
@@ -23,7 +23,7 @@
         </div>
       </nav>
     </header>
-    <main class="container my-4">
+    <main class="container justify-content-center ">
       <div id="rosterGrid" class="row g-3"></div>
     </main>
     <div
